review-feedback z-index fix.
Former-commit-id: 1465657e5c15e49765e6bfc803d34424a901cd73

--- a/sources/easygenerator.Web/Content/panels.css
+++ b/sources/easygenerator.Web/Content/panels.css
@@ -6,7 +6,7 @@
     min-height: 100%;
     height: 100%;
     width: 330px;
-    z-index: 100;
+    z-index: 200;
     right: -300px;
     font-family: 'OpenSans';
     font-size: 13px;
